<resources>
    <string name="app_name">Timetable for HSE FE</string>
    <string name="button_student">РАСПИСАНИЕ ДЛЯ СТУДЕНТОВ</string>
    <string name="button_teacher">РАСПИСАНИЕ ДЛЯ ПРЕПОДАВАТЕЛЯ</string>
    <string name="btn_settings">НАСТРОЙКИ</string>
    <string name="btn_save">СОХРАНИТЬ</string>


    <string name="btn_click_msg">Вы нажали на кнопку %s</string>

    <string name="label_choose_teacher">Выберите преподавателя:</string>
    <string name="label_choose_group">Выберите группу:</string>

    <string name="btn_day">РАСПИСАНИЕ НА\nДЕНЬ</string>
    <string name="btn_week">РАСПИСАНИЕ НА\nНЕДЕЛЮ</string>

    <string name="label_time">Сейчас: </string>
    <string name="label_status_base">Идет пара / Нет пар</string>
    <string name="label_subject_base">Дисципилна</string>
    <string name="label_cabinet_base">Кабинет</string>
    <string name="label_corp_base">Корпус</string>
    <string name="label_teacher_base">Преподаватель</string>

    <string name="btn_make_photo">СДЕЛАТЬ ФОТО</string>
    <string name="label_point_photo">Укажите фото</string>
    <string name="label_point_name">Укажите ваше имя</string>
    <string name="label_current">Текущая освещенность:</string>

    <string name="ask_photo_perm">Для снятия фото нужно предоставить права на фото</string>
    <string name="saved_image_msg">Сохранено</string>

    <string name="all_sensors">Все датчики:</string>
    <string name="lux">"%.2f lux</string>

    <string name="BaseTag">BaseActivity</string>
    <string name="BaseUrl">https://api.ipgeolocation.io/ipgeo?apiKey=b03018f75ed94023a005637878ec0977</string>
</resources>